# paperbee

./: .gitignore  2025-08-11_biorxiv.json  2025-08-11_pub_arx.json  2025-09-22_biorxiv.json  2025-09-22_pub_arx.json  2025-09-24_biorxiv.json  2025-09-24_pub_arx.json  COMPLETE_FIX_SUMMARY.md  DEBUGGING_GUIDE.md  DEBUG_FIXES_APPLIED.md  FINAL_PROFESSIONAL_FIXES.md  FINAL_SYSTEM_STATUS.md  GITHUB_SECRETS_SETUP.md  QUERY_OPTIMIZATION_GUIDE.md  README.md  SLACK_PAPERS_ONLY.md  debug_test.py  detailed_llm_test.py  direct_test.py  dummy_creds.json  fixed_clinic_config.yml  functional_test.py  minimal_test.yml  optimized_marrpeng_config.yml  pyproject.toml  quick_biorxiv_test.yml  simple_marrpeng_test.py  simple_test_config.yml  test_config.yml  test_direct_biorxiv.py  test_no_llm_config.yml
.github/workflows/: daily-papers-simple.yml  daily-papers-simple_fixed.yml  daily_paper_marr.yml  test-llm-biorxiv.yml
src/PaperBee/: daily_posting.py
src/PaperBee/papers/: biorxiv_api_client.py  categorized_slack_formatter.py  llm_filtering.py  papers_finder.py  slack_papers_formatter.py  telegram_papers_formatter.py  utils.py  zulip_papers_formatter.py
temp_venv/: pyvenv.cfg
